force-app/main/default/objects/Configuration_Rule__mdt/Configuration_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Configuration Rule</label>
    <pluralLabel>Configuration Rules</pluralLabel>
</CustomObject>