force-app/main/default/objects/Configuration_Rule__mdt/fields/Bundle_SKU__c.field-meta.xml
<CustomField>
    <fullName>Bundle_SKU__c</fullName>
    <label>Bundle SKU</label>
    <length>64</length>
    <type>Text</type>
</CustomField>