force-app/main/default/objects/Configuration_Rule__mdt/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires</fullName>
                <default>true</default>
                <label>Requires</label>
            </value>
            <value>
                <fullName>Excludes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>