force-app/main/default/objects/Configuration_Rule__mdt/fields/Source_SKU__c.field-meta.xml
<CustomField>
    <fullName>Source_SKU__c</fullName>
    <label>Source SKU</label>
    <length>64</length>
    <type>Text</type>
</CustomField>