force-app/main/default/objects/Configuration_Rule__mdt/fields/Target_SKU__c.field-meta.xml
<CustomField>
    <fullName>Target_SKU__c</fullName>
    <label>Target SKU</label>
    <length>64</length>
    <type>Text</type>
</CustomField>